# myriad_rust

./: .gitignore  CNAME  Cargo.toml  boards.txt  capacitor.config.json  dark-3d650f4dc7f9b171.css  index.html  myriad-137e6e93cea609c4.js  myriad-137e6e93cea609c4_bg.wasm  myriad-1848545132732cdd.js  myriad-1848545132732cdd_bg.wasm  myriad-2076c1fd6a0f9ce6.js  myriad-2076c1fd6a0f9ce6_bg.wasm  myriad-26876da84b0bf774.js  myriad-26876da84b0bf774_bg.wasm  myriad-2a4014530f96268.js  myriad-2a4014530f96268_bg.wasm  myriad-39a2b73c15e29a21.js  myriad-39a2b73c15e29a21_bg.wasm  myriad-3f01de0c04663c47.js  myriad-3f01de0c04663c47_bg.wasm  myriad-46cf2c242e3e4273.js  myriad-46cf2c242e3e4273_bg.wasm  myriad-46e50518382f8903.js  myriad-46e50518382f8903_bg.wasm  myriad-568d334672de7644.js  myriad-568d334672de7644_bg.wasm  myriad-5a0f3aca62fd9763.js  myriad-5a0f3aca62fd9763_bg.wasm  myriad-60d431bfd262e3d8.js  myriad-60d431bfd262e3d8_bg.wasm  myriad-826bd50df5921af2.js  myriad-826bd50df5921af2_bg.wasm  myriad-926bea1bfe11ad58.js  myriad-926bea1bfe11ad58_bg.wasm  myriad-a0c07adf53f18f54.js  myriad-a0c07adf53f18f54_bg.wasm  myriad-a0ced1527edda3f.js  myriad-a0ced1527edda3f_bg.wasm  myriad-a2d327597c75ad15.js  (+73 more)
.github/workflows/: continuous_deployment.yml
benches/: bench.rs
board_generator/: .gitignore  Cargo.toml
board_generator/src/: main.rs
myriad/: Cargo.toml
myriad/benches/: bench.rs
myriad/src/: board.rs  coordinate.rs  creator.rs  difficulty.rs  game_mode.rs  lib.rs  move_result.rs  rune.rs  solver.rs
myriad/src/parser/: mod.rs
myriad/tests/: my_tests.rs
myriad_yew/: Cargo.toml  dark.scss  index.html  manifest.json  robots.txt  sitemap.txt  styles.css
myriad_yew/src/: main.rs
myriad_yew/src/state/: chosen_positions_state.rs  chosenpositionsstate.rs  circle_type.rs  circletype.rs  dialog_state.rs  failed_logs_state.rs  found_words_state.rs  foundwordsstate.rs  full_game_state.rs  full_state.rs  fullstate.rs  game_rating.rs  game_size.rs  game_timing.rs  history_state.rs  historystate.rs  info_bar_state.rs  logging.rs  mod.rs  msg.rs  preferences_state.rs  recent_word_state.rs  recentwordstate.rs  rot_flip_state.rs  rotflipstate.rs  selected_tab_state.rs  user_state.rs  util.rs
myriad_yew/src/web/: app.rs  app_redirect.rs  capacitor.rs  circle.rs  congratulations.rs  control_buttons.rs  controlbuttons.rs  crosshair.rs  dialog.rs  found_words.rs  foundwords.rs  history.rs  icons.rs  info_bar.rs  mod.rs  recent_words.rs  recentwords.rs  sharing.rs  startup.rs  tab_headers.rs
netlify/edge-functions/: og-param-proxy.js
netlify/functions/hello/: Cargo.toml
netlify/functions/image/: .gitignore  Cargo.toml
netlify/functions/image/src/: main.rs
netlify/functions/image/src/snapshots/: image__tests__image__plus1_minus5_minus2495_1080_1080.snap  image__tests__image__plus1_minus5_minus2495_1200_600.snap  image__tests__image__plus1_minus5_minus2495_1200_630.snap  image__tests__image_invalid_1080_1080.snap  image__tests__image_invalid_1200_630.snap
plugins/: import-map.json
snippets/myriad-e7c04ca08880a42e/: confetti.js
src/: foundwordsstate.rs  gamestate.rs  lib.rs  main.rs  recentwordstate.rs
src/core/: board.rs  coordinate.rs  creator.rs  game_mode.rs  letter.rs  mod.rs  move_result.rs  rune.rs  solver.rs
src/core/parser/: mod.rs
src/state/: chosenpositionsstate.rs  circletype.rs  dialogstate.rs  drag.rs  foundwordsstate.rs  fullstate.rs  gamestate.rs  historystate.rs  mod.rs  msg.rs  recentwordstate.rs  rotflipstate.rs  selectedtabstate.rs
src/web/: app.rs  board.rs  circle.rs  confetti.rs  controlbuttons.rs  crosshair.rs  dialog.rs  foundwords.rs  icons.rs  mod.rs  newgamebutton.rs  recentwords.rs  rope.rs  worker.rs
tests/: my_tests.rs  tests.rs
