[package]
name = "myriad"
version = "0.1.0"
authors = ["Mark Wainwright <wainwrightml@gmail.com>"]
license = "MIT"
keywords = ["math", "game"]
edition= "2021"

[dependencies]
itertools = "0.10.3"
num = "0.4"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive", "rc"] }
rand = {version = "0.8.5"}
getrandom = {version="0.2.5", features=["js"]}

log = "0.4.6"
wasm-logger = "0.2.0"
yew = { git = "https://github.com/yewstack/yew.git", features = ["csr"] }
yewdux = { git = "https://github.com/intendednull/yewdux.git" }

wasm-bindgen-futures = "0.4"
wasm-bindgen= { version = "0.2.80", features = ["serde"] }
automod = "1.0"
instant = { version = "0.1", features = [ "wasm-bindgen", "inaccurate" ] }

[dependencies.web-sys]
version = "0.3.55"
features = [
    "HtmlInputElement",
]


[[bench]]
name = "bench"
harness = false

[profile.release]
panic = 'abort'
codegen-units = 1
lto = true
opt-level = 3


[dev-dependencies]
bencher= "0.1.5"

