[package]
name = "myriad"
version = "0.1.0"
authors = ["Mark Wainwright <wainwrightml@gmail.com>"]
license = "MIT"
keywords = ["math", "game"]
edition= "2021"

[dependencies]
itertools = "0.10"
num = "0.4"
num-traits = "0.2"
serde = { version = "1", features = ["derive", "rc"] }
serde_with = "2"
rand = {version = "0.8"}
getrandom = {version="0.2", features=["js"]}
strum = {version = "0.24", features = ["derive"]}
chrono = {version="0.4", features = ["serde", "wasmbind"]}

log = "0.4"
wasm-logger = "0.2"
yew = { git = "https://github.com/yewstack/yew.git", features = ["csr",] }
yewdux = { git = "https://github.com/intendednull/yewdux.git" }
yew-router = { git = "https://github.com/yewstack/yew.git" }



wasm-bindgen-futures = "0.4"
wasm-bindgen= { version = "0.2", features = ["serde"] }
instant = { version = "0.1", features = [ "wasm-bindgen", "inaccurate" ] }
js-sys = "0.3"
clap = { version = "4", features = ["derive"], optional =false }

static_assertions = "1.1.0"
rayon = "1.5"

[dependencies.web-sys]
version = "0.3"
features = [
    "HtmlInputElement",
]


[[bench]]
name = "bench"
harness = false

[profile.release]
panic = 'abort'
codegen-units = 1
lto = true
opt-level = 3



[dev-dependencies]
criterion= "0.4"
ntest = "0.8"

[[bin]]
name="board-generator"
#required-features = ["clap"]
