[package]
name = "myriad"
version = "0.1.0"
authors = ["Mark Wainwright <wainwrightml@gmail.com>"]
license = "MIT"
keywords = ["math", "game"]
edition= "2021"

[dependencies]
itertools = "0.10"
num = "0.4"
num-traits = "0.2"
serde = { version = "1", features = ["derive", "rc"] }
geometrid = {git = "https://github.com/wainwrightmark/geometrid", features= ["std", "serde"]}
rand = {version = "0.8"}
strum = {version = "0.24", features = ["derive"]}
static_assertions = "1.1.0"
tinyvec = {version= "1.6.0", features=["rustc_1_57", "serde"]}


[dev-dependencies]
criterion= "0.4"
ntest = "0.9"

[[bench]]
name = "bench"
harness = false
