[package]
name = "myriad_yew"
version = "0.1.0"
authors = ["Mark Wainwright <wainwrightml@gmail.com>"]
license = "MIT"
keywords = ["math", "game"]
edition= "2021"

[dependencies]
myriad = { path = "../myriad" }

itertools = "0.10"
num = "0.4"
num-traits = "0.2"
serde = { version = "1", features = ["derive", "rc"] }
serde_with = "2"
rand = {version = "0.8"}
strum = {version = "0.24", features = ["derive"]}


log = "0.4"
wasm-logger = "0.2"
yew = { version="0.20", features = ["csr",] }
yewdux = { version="0.9" }
yew-router = { version="0.17" }
chrono = {version="0.4", features = ["serde", "wasmbind"]}
getrandom = {version="0.2", features=["js"]}

wasm-bindgen-futures = "0.4"
wasm-bindgen= { version = "0.2", features = ["serde"] }
instant = { version = "0.1", features = [ "wasm-bindgen", "inaccurate" ] }
js-sys = "0.3"

static_assertions = "1.1.0"

[dependencies.web-sys]
version = "0.3"
features = [
    "HtmlInputElement",
]



[profile.release]
panic = 'abort'
codegen-units = 1
lto = true
opt-level = 3



[dev-dependencies]
ntest = "0.9"

