[package]
edition = "2021"
name = "image"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws_lambda_events = "0.8"
http = "*"
lambda_runtime = "*"
log = "*"
resvg = "0.31.0"
simple_logger = "*"
tokio = "*"
ttf-parser = "0.19.0"
